# cloudreve-cli

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: auth.rs  mod.rs  version.rs
src/commands/dav/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/commands/file/: batch.rs  copy.rs  delete.rs  diff.rs  download.rs  info.rs  list.rs  mkdir.rs  mod.rs  move_cmd.rs  preview.rs  rename.rs  restore.rs  search.rs  share.rs  sync.rs  upload.rs
src/commands/file/metadata/: mod.rs  update.rs
src/commands/file/permission/: delete.rs  mod.rs  set.rs
src/commands/settings/: get.rs  mod.rs  set.rs
src/commands/share/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/commands/site/: config.rs  get.rs  mod.rs
src/commands/user/: change_password.rs  info.rs  mod.rs  policies.rs  quota.rs  update_profile.rs
src/commands/workflow/: archive.rs  cancel.rs  download.rs  extract.rs  import.rs  list.rs  mod.rs  progress.rs  relocate.rs
src/context/: client.rs  mod.rs  token_manager.rs
src/utils/: concurrency.rs  glob.rs  mod.rs
tests/: cli_integration_test.rs
tests/helpers/: cli_runner.rs  mod.rs  tempfile_manager.rs
tests/modules/: auth_tests.rs  common.rs  file_tests.rs  mod.rs  other_tests.rs
