[package]
name = "cloudreve-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Cloudreve API"
license.workspace = true
authors.workspace = true
repository = "https://github.com/larriti/cloudreve-cli"
keywords = ["cloudreve", "cli", "storage", "cloud"]
categories = ["command-line-utilities"]

[[bin]]
name = "cloudreve-cli"
path = "src/main.rs"

[dependencies]
cloudreve-api = "0.3"

clap = { version = "4.0", features = ["derive", "cargo"] }
clap_complete = "4.5"
dirs = "6.0.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
rpassword = "7.0"
log = "0.4"
toml = "0.9.8"

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
