[package]
name = "cloudreve-cli"
version = "0.5.0"
edition.workspace = true
description = "Command-line interface for Cloudreve API"
license.workspace = true
authors.workspace = true
repository = "https://github.com/larriti/cloudreve-cli"
keywords = ["cloudreve", "cli", "storage", "cloud"]
categories = ["command-line-utilities"]

[[bin]]
name = "cloudreve-cli"
path = "src/main.rs"

[dependencies]
cloudreve-api = "0.5"

clap = { version = "4.0", features = ["derive", "cargo"] }
clap_complete = "4.5"
dirs = "6.0.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
rpassword = "7.0"
log = "0.4"
toml = "0.9.8"

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

# Glob pattern support
glob = "0.3"
# Async concurrency control
futures = "0.3"

[dev-dependencies]
# CLI 进程测试
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

# 异步测试运行时
tokio = { workspace = true, features = ["test-util"] }

# 配置和序列化（使用与主依赖相同的版本）
toml = "0.9"

# 日志和测试辅助
env_logger = "0.11"

# 文件和临时文件处理
tempfile = "3.14"
regex = "1.11"

# 测试工具
serial_test = "3.2"
